update contract models

--- a/src/ApiDevBP.Business/ApiDevBP.Business.csproj
+++ b/src/ApiDevBP.Business/ApiDevBP.Business.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ApiDevBP\ApiDevBP.csproj" />
+    <ProjectReference Include="..\ApiDevBP.Model\ApiDevBP.Model.csproj" />
   </ItemGroup>
 
 </Project>
