Implement call to IUserService

--- a/src/ApiDevBP.Business/ApiDevBP.Business.csproj
+++ b/src/ApiDevBP.Business/ApiDevBP.Business.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApiDevBP.Model\ApiDevBP.Model.csproj" />
+    <ProjectReference Include="..\ApiDevBP.Service\ApiDevBP.Service.csproj" />
   </ItemGroup>
 
 </Project>
