--- a/src/ApiDevBP.Service/ApiDevBP.Service.csproj
+++ b/src/ApiDevBP.Service/ApiDevBP.Service.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApiDevBP.DataAccess\ApiDevBP.DataAccess.csproj" />
     <ProjectReference Include="..\ApiDevBP.Model\ApiDevBP.Model.csproj" />
   </ItemGroup>
 
